fixed scrollbar issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+/* styles/globals.css or your component-specific stylesheet */
+.scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: transparent ; /* color of the thumb and the track */
+  }
+  
+  .scrollbar::-webkit-scrollbar {
+    width: 12px; /* width of the scrollbar */
+  }
+  
+  .scrollbar::-webkit-scrollbar-thumb {
+    background-color: transparent; /* color of the thumb */
+  }
+  
+  .scrollbar::-webkit-scrollbar-track {
+    background-color: transparent; /* color of the track */
+  }
+  
